# local-minutes

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py  run_macos.command
scripts/: macos_audio_check.py  setup_macos.sh
src/local_minutes/: __init__.py  lmstudio.py  recorder.py  server.py  transcribe.py
static/: app.js  index.html  styles.css
